2003-04-14  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c: 
	* generic/tclPathObj.c: 
	* generic/tclFileSystem.h: overlooked one function which
	was duplicated, so this is now shared between modules.
	
2003-04-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Add check for FINDEX_INFO_LEVELS
	from winbase.h, known to be a problem in VC++ 5.2.
	Define HAVE_NO_FINDEX_ENUMS if the define does not
	exist.
	* win/tclWinFile.c: Put declarations for
	FINDEX_INFO_LEVELS and FINDEX_SEARCH_OPS inside
	a check for HAVE_NO_FINDEX_ENUMS so that these are
	not declared twice. This fixes the Mingw build.
	* win/tclWinTime.c: Rework the init of timeInfo
	so that the number or initializers matches the
	declaration. This was broken under Mingw. Add
	cast to avoid compile warning when calling the
	AccumulateSample function.

2003-04-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in (GENERIC_OBJS): add missing tclPathObj.c

2003-04-12  Kevin Kenny  <kennykb@acm.org>

	* doc/clock.n:
	* generic/tclClock.c (Tcl_ClockObjCmd): 
	* tests/clock.test: Implementation of TIP #124. Also renumbered
	test cases to avoid duplicates [Bug 710310].
	* tests/winTime.test:
	* win/tclWinTest.c (TestwinclockCmd, TestwinsleepCmd):
	* win/tclWinTime.c (Tcl_WinTime, UpdateTimeEachSecond,
	                    ResetCounterSamples, AccumulateSample,
	                    SAMPLES, TimeInfo): Made substantial changes
	to the phase-locked loop (replaced an IIR filter with an FIR one)
	in a quest for improved loop stability (Bug not logged at SF, but
	cited in private communication from Jeff Hobbs).
	
2003-04-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c (Tcl_StringObjCmd,STR_IS_INT):  Corrected
	inconsistent results of [string is integer] observed on systems
	where sizeof(long) != sizeof(int).  [Bug 718878]
	* tests/string.test: Added tests for Bug 718878.